# please

./: .gitignore  Cargo.toml  README.md
app/: build.toml
src/: app.rs  build.toml  cli.rs  errors.rs  gen.rs  main.rs  parse.rs  system.rs  utils.rs
src/templates/: c
test/: CoolThing.out  build.toml
test/include/: other.h
test/src/: main.c
