[package]
name = "pwease"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.0.4"
serde = { version = "1.0.192", features = ["derive"] }
toml = "0.8.8"
